RESOLVED FIXED173484
NavigationAction has too many constructors
https://bugs.webkit.org/show_bug.cgi?id=173484
Summary NavigationAction has too many constructors
Daniel Bates
Reported 2017-06-16 11:21:04 PDT
We consider NavigationAction an immutable object once constructed. There are 12 different constructors for instantiating a NavigationAction. To have NavigationAction require more data on construction can require updating 11 of these constructors (-1 for the default constructor) or adding a new constructor. I suggest that we extract all the optional arguments passed to NavigationAction to a struct that is passed to a NavigationAction. This will allow us to reduce the number of constructors from 12 to 2: the default constructor and a constructor that takes a resource request and a struct of details.
Attachments
Patch (25.76 KB, patch)
2017-06-16 11:23 PDT, Daniel Bates
no flags
Patch (25.80 KB, patch)
2017-06-16 11:42 PDT, Daniel Bates
no flags
Patch (26.05 KB, patch)
2017-06-16 11:50 PDT, Daniel Bates
no flags
Patch (26.23 KB, patch)
2017-06-16 15:43 PDT, Daniel Bates
no flags
Patch (15.25 KB, patch)
2017-06-16 22:52 PDT, Daniel Bates
beidson: review+
Patch for landing (15.92 KB, patch)
2017-06-19 16:33 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2017-06-16 11:23:28 PDT
Build Bot
Comment 2 2017-06-16 11:25:30 PDT
Attachment 313095 [details] did not pass style-queue: ERROR: Source/WebCore/loader/NavigationAction.cpp:62: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 3 2017-06-16 11:42:22 PDT
Build Bot
Comment 4 2017-06-16 11:45:33 PDT
Attachment 313103 [details] did not pass style-queue: ERROR: Source/WebCore/loader/NavigationAction.cpp:62: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 5 2017-06-16 11:50:17 PDT
Created attachment 313104 [details] Patch Attempt to fix the Windows EWS.
Build Bot
Comment 6 2017-06-16 11:52:24 PDT
Attachment 313104 [details] did not pass style-queue: ERROR: Source/WebCore/loader/NavigationAction.cpp:62: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 7 2017-06-16 15:43:02 PDT
Created attachment 313149 [details] Patch Another attempt to fix the Windows EWS.
Build Bot
Comment 8 2017-06-16 15:45:19 PDT
Attachment 313149 [details] did not pass style-queue: ERROR: Source/WebCore/loader/NavigationAction.cpp:62: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 9 2017-06-16 20:29:47 PDT
Could we not achieve pretty much the same thing by using default values for the parameters?
Daniel Bates
Comment 10 2017-06-16 22:37:04 PDT
(In reply to Sam Weinig from comment #9) > Could we not achieve pretty much the same thing by using default values for > the parameters? We can. Will update patch to take this approach.
Daniel Bates
Comment 11 2017-06-16 22:52:38 PDT
Build Bot
Comment 12 2017-06-16 22:54:28 PDT
Attachment 313188 [details] did not pass style-queue: ERROR: Source/WebCore/loader/NavigationAction.cpp:47: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 13 2017-06-19 15:37:09 PDT
Comment on attachment 313188 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313188&action=review Stylistic comments only. > Source/WebCore/loader/FrameLoader.cpp:3411 > - action = NavigationAction(request, loadType, isFormSubmission, event, shouldOpenExternalURLsPolicy); > + action = NavigationAction { request, loadType, isFormSubmission, event, shouldOpenExternalURLsPolicy }; "action" is already known to be a NavigationAction object, and therefore the initializer list does not need a type name preceding it. > Source/WebCore/loader/FrameLoader.cpp:3414 > + action = NavigationAction { request, NavigationType::FormResubmitted, shouldOpenExternalURLsPolicy, event }; Ditto > Source/WebCore/loader/FrameLoader.cpp:3703 > + Page* page = oldPage->chrome().createWindow(openerFrame, requestWithReferrer, features, NavigationAction { requestWithReferrer.resourceRequest(), NavigationType::Other, shouldOpenExternalURLsPolicy }); Ditto > Source/WebCore/loader/NavigationAction.cpp:47 > +NavigationAction::NavigationAction(const ResourceRequest& resourceRequest, NavigationType type, > + ShouldOpenExternalURLsPolicy shouldOpenExternalURLsPolicy, Event* event, const AtomicString& downloadAttribute) > + : m_resourceRequest { resourceRequest } We don't normally break up lines like this (the previous line wasn't nearly too long, IMHO), and this is confusing style-bot on like 47
Daniel Bates
Comment 14 2017-06-19 16:19:43 PDT
Comment on attachment 313188 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=313188&action=review >> Source/WebCore/loader/FrameLoader.cpp:3411 >> + action = NavigationAction { request, loadType, isFormSubmission, event, shouldOpenExternalURLsPolicy }; > > "action" is already known to be a NavigationAction object, and therefore the initializer list does not need a type name preceding it. We need to specify the type here because the NavigationAction constructor is marked explicit. It is marked explicit because in the case that only a ResourceRequest object is used to instantiate a NavigationAction it seems error prone to allow implicit conversion to NavigationAction. We could separate out the NavigationAction constructor that takes only a ResourceRequest object as an argument and mark that constructor explicit and remove the keyword explicit from the NavigationAction constructor overload that takes more than one argument. >> Source/WebCore/loader/NavigationAction.cpp:47 >> + : m_resourceRequest { resourceRequest } > > We don't normally break up lines like this (the previous line wasn't nearly too long, IMHO), and this is confusing style-bot on like 47 Will unwrap this line before landing. We should fix the style checker :)
Daniel Bates
Comment 15 2017-06-19 16:33:57 PDT
Created attachment 313341 [details] Patch for landing For EWS
Build Bot
Comment 16 2017-06-19 16:36:44 PDT
Attachment 313341 [details] did not pass style-queue: ERROR: Source/WebCore/loader/NavigationAction.cpp:53: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 17 2017-06-19 17:04:15 PDT
(In reply to Daniel Bates from comment #14) > Comment on attachment 313188 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=313188&action=review > > >> Source/WebCore/loader/FrameLoader.cpp:3411 > >> + action = NavigationAction { request, loadType, isFormSubmission, event, shouldOpenExternalURLsPolicy }; > > > > "action" is already known to be a NavigationAction object, and therefore the initializer list does not need a type name preceding it. > > We need to specify the type here because the NavigationAction constructor is > marked explicit. It is marked explicit because in the case that only a > ResourceRequest object is used to instantiate a NavigationAction it seems > error prone to allow implicit conversion to NavigationAction. We could > separate out the NavigationAction constructor that takes only a > ResourceRequest object as an argument and mark that constructor explicit and > remove the keyword explicit from the NavigationAction constructor overload > that takes more than one argument. It's fine to have an explicit one - I would request *not* using initializer list construction in that case - That's very uncommon in the code base (at least in the parts where I spend my time, like the loader)
Daniel Bates
Comment 18 2017-06-20 09:58:29 PDT
(In reply to Brady Eidson from comment #17) > (In reply to Daniel Bates from comment #14) > > Comment on attachment 313188 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=313188&action=review > > > > >> Source/WebCore/loader/FrameLoader.cpp:3411 > > >> + action = NavigationAction { request, loadType, isFormSubmission, event, shouldOpenExternalURLsPolicy }; > > > > > > "action" is already known to be a NavigationAction object, and therefore the initializer list does not need a type name preceding it. > > > > We need to specify the type here because the NavigationAction constructor is > > marked explicit. It is marked explicit because in the case that only a > > ResourceRequest object is used to instantiate a NavigationAction it seems > > error prone to allow implicit conversion to NavigationAction. We could > > separate out the NavigationAction constructor that takes only a > > ResourceRequest object as an argument and mark that constructor explicit and > > remove the keyword explicit from the NavigationAction constructor overload > > that takes more than one argument. > > It's fine to have an explicit one - I would request *not* using initializer > list construction in that case - That's very uncommon in the code base (at > least in the parts where I spend my time, like the loader) OK. Will keep the explicit NavigationAction constructor that has default values for all of its arguments and will use function style notation instead of C++11 brace initialization.
Daniel Bates
Comment 19 2017-06-20 10:15:14 PDT
(In reply to Daniel Bates from comment #18) > (In reply to Brady Eidson from comment #17) > > (In reply to Daniel Bates from comment #14) > > > Comment on attachment 313188 [details] > > > Patch > > > > > > View in context: > > > https://bugs.webkit.org/attachment.cgi?id=313188&action=review > > > > > > >> Source/WebCore/loader/FrameLoader.cpp:3411 > > > >> + action = NavigationAction { request, loadType, isFormSubmission, event, shouldOpenExternalURLsPolicy }; > > > > > > > > "action" is already known to be a NavigationAction object, and therefore the initializer list does not need a type name preceding it. > > > > > > We need to specify the type here because the NavigationAction constructor is > > > marked explicit. It is marked explicit because in the case that only a > > > ResourceRequest object is used to instantiate a NavigationAction it seems > > > error prone to allow implicit conversion to NavigationAction. We could > > > separate out the NavigationAction constructor that takes only a > > > ResourceRequest object as an argument and mark that constructor explicit and > > > remove the keyword explicit from the NavigationAction constructor overload > > > that takes more than one argument. > > > > It's fine to have an explicit one - I would request *not* using initializer > > list construction in that case - That's very uncommon in the code base (at > > least in the parts where I spend my time, like the loader) > > OK. Will keep the explicit NavigationAction constructor that has default > values for all of its arguments and will use function style notation instead > of C++11 brace initialization. From quickly greping our source code using C++11 brace initialization syntax with an explicit type (e.g. NavigationAction { ... }) I see over 200 places in WebCore where we use this style. I used the following grep command executed inside my top-level WebKit checkout: grep -R -E -e '(\(|= )\w+ \{' --exclude 'ChangeLog*' --exclude '*.pl' --exclude '*.rb' --exclude-dir Source/WebCore/bindings Source/WebCore | wc -l You can modify this query to see that we also use this syntax in WTF, JavaScriptCore, WebKit, and WebKit2.
Daniel Bates
Comment 20 2017-06-20 10:21:57 PDT
Radar WebKit Bug Importer
Comment 21 2017-06-20 15:41:08 PDT
Note You need to log in before you can comment on or make changes to this bug.