Source/WebCore/loader/NavigationAction.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006-2016 Apple Inc.  All rights reserved.
+ * Copyright (C) 2006-2017 Apple Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,30 +28,27 @@
 
 #pragma once
 
-#include "Event.h"
 #include "FrameLoaderTypes.h"
-#include "URL.h"
 #include "ResourceRequest.h"
 #include "UserGestureIndicator.h"
 #include <wtf/Forward.h>
 
 namespace WebCore {
 
+class Event;
+
 class NavigationAction {
 public:
-    WEBCORE_EXPORT NavigationAction();
-    WEBCORE_EXPORT explicit NavigationAction(const ResourceRequest&);
-    WEBCORE_EXPORT NavigationAction(const ResourceRequest&, NavigationType);
-    WEBCORE_EXPORT NavigationAction(const ResourceRequest&, FrameLoadType, bool isFormSubmission);
+    WEBCORE_EXPORT explicit NavigationAction(const ResourceRequest& = { }, NavigationType = NavigationType::Other, ShouldOpenExternalURLsPolicy = ShouldOpenExternalURLsPolicy::ShouldNotAllow, Event* = nullptr, const AtomicString& downloadAttribute = nullAtom);
+    NavigationAction(const ResourceRequest&, FrameLoadType, bool isFormSubmission, Event* = nullptr, ShouldOpenExternalURLsPolicy = ShouldOpenExternalURLsPolicy::ShouldNotAllow, const AtomicString& downloadAttribute = nullAtom);
 
-    NavigationAction(const ResourceRequest&, ShouldOpenExternalURLsPolicy);
-    NavigationAction(const ResourceRequest&, NavigationType, Event*);
-    NavigationAction(const ResourceRequest&, NavigationType, Event*, ShouldOpenExternalURLsPolicy);
-    NavigationAction(const ResourceRequest&, NavigationType, Event*, ShouldOpenExternalURLsPolicy, const AtomicString& downloadAttribute);
-    NavigationAction(const ResourceRequest&, NavigationType, ShouldOpenExternalURLsPolicy);
-    NavigationAction(const ResourceRequest&, FrameLoadType, bool isFormSubmission, Event*);
-    NavigationAction(const ResourceRequest&, FrameLoadType, bool isFormSubmission, Event*, ShouldOpenExternalURLsPolicy);
-    NavigationAction(const ResourceRequest&, FrameLoadType, bool isFormSubmission, Event*, ShouldOpenExternalURLsPolicy, const AtomicString& downloadAttribute);
+    WEBCORE_EXPORT ~NavigationAction();
+
+    WEBCORE_EXPORT NavigationAction(const NavigationAction&);
+    NavigationAction(NavigationAction&&);
+
+    NavigationAction& operator=(const NavigationAction&);
+    NavigationAction& operator=(NavigationAction&&);
 
     NavigationAction copyWithShouldOpenExternalURLsPolicy(ShouldOpenExternalURLsPolicy) const;
 
@@ -72,10 +69,10 @@ public:
 
 private:
     ResourceRequest m_resourceRequest;
-    NavigationType m_type { NavigationType::Other };
+    NavigationType m_type;
+    ShouldOpenExternalURLsPolicy m_shouldOpenExternalURLsPolicy;
     RefPtr<Event> m_event;
-    RefPtr<UserGestureToken> m_userGestureToken;
-    ShouldOpenExternalURLsPolicy m_shouldOpenExternalURLsPolicy { ShouldOpenExternalURLsPolicy::ShouldNotAllow };
+    RefPtr<UserGestureToken> m_userGestureToken { UserGestureIndicator::currentUserGesture() };
     AtomicString m_downloadAttribute;
 };
 
