Source/WebCore/page/Performance.cpp
@@ -37,6 +37,7 @@
 
 #include "Document.h"
 #include "DocumentLoader.h"
+#include "Event.h"
 #include "EventNames.h"
 #include "Frame.h"
 #include "PerformanceEntry.h"
